# cpp-waste-recycling-danielEros

./: .gitignore  CMakeLists.txt  README.md  wasteRecycling.cpp
Dustbins/: Dustbin.cpp  Dustbin.h  Dustbin9000.cpp  Dustbin9000.h
ErrorHandling/: DustBinExceptions.hpp
Garbages/: BottleCap.cpp  BottleCap.h  Garbage.cpp  Garbage.h  MetalGarbage.cpp  MetalGarbage.h  PaperGarbage.cpp  PaperGarbage.h  PlasticGarbage.cpp  PlasticGarbage.h
Tester/: Tester.hpp
UserInterface/: UserInterface.hpp
